Fix a linking problem with showfoto, image plugins and --enable-gcc-hidden-visibility: All image plugins link to libdigikam.so. The showfoto executable however does not link to this lib, but statically links the relevant parts. With visibility hidden, now the linker obviously cannot see the already linked DImgInterface class, and there would be two different static variables for DImgInterface::instance(). One with the loaded image, the other (from the image plugins) with a null image.

BUG: 140176

svn path=/trunk/extragear/graphics/digikam/; revision=625731